still not working

--- a/HW/04_assignment/DQN.ipynb
+++ b/HW/04_assignment/DQN.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
     "\n",
     "epsilon_start = 1.0                  # Parameters for epsilon-greedy policy: initial epsilon\n",
     "epsilon_end = 0.0                    # Final epsilon\n",
-    "neps = int(0.5*nsteps)               # Number of steps to decay epsilon\n",
+    "neps = int(1.*nsteps)               # Number of steps to decay epsilon\n",
     "\n",
     "learning_rate = 2e-3                 # Initial learning rate\n",
     "lr_end = 0                           # Final learning rate\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -320,22 +320,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2016-11-22 12:31:29,200] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,223] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,267] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,290] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,321] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,353] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,363] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,383] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,417] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,450] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,475] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,499] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,519] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,549] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,589] Making new env: CartPole-v0\n",
-      "[2016-11-22 12:31:29,617] Making new env: CartPole-v0\n"
+      "[2016-11-22 12:59:16,202] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,238] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,249] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,265] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,305] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,331] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,376] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,421] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,463] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,496] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,523] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,566] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,600] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,647] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,661] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:59:16,681] Making new env: CartPole-v0\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
     "        block_reward += reward\n",
     "        if done:\n",
     "            observation = envs[i].reset()\n",
-    "            #state[:,i] = np.concatenate((np.zeros_like(state[nfeats:,i]), preprocess(observation)))\n",
+    "            state[:,i] = np.concatenate((np.zeros_like(state[nfeats:,i]), preprocess(observation)))\n",
     "            total_epochs += 1\n",
     "            #rewards[i] = 0\n",
     "            \n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -410,9 +410,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.01709302657 9.01709302657\n",
-      "W2 max relative error: 2.854975e-09\n",
-      "W1 max relative error: 7.591903e-07\n"
+      "3041.57924617 760.394811542\n",
+      "W2 max relative error: 5.861924e-06\n",
+      "W1 max relative error: 1.345519e-03\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -495,101 +495,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.54594431  1.16689433  1.67661509  1.2622613   1.88609791  1.81639218\n",
-      "   1.42641751  1.18032009  1.43651016  1.54633194  1.32394912  1.43129812\n",
-      "   1.42454173  1.12972263  1.35243752  2.0213679 ]\n",
-      " [ 1.3613525   1.37561319  2.26482377  1.46564378  1.62645232  2.4612569\n",
-      "   1.65580744  1.24541686  1.6747149   1.38252453  1.8532417   1.30605075\n",
-      "   1.67088427  1.11986066  1.55314033  1.79320141]]\n",
-      "step 0, time 0.0, loss 0.00161422, epochs 789, reward/epoch 22.11534\n",
-      "[[ 5.25798678  1.16317915  5.40350258  5.38377692  4.98016939  5.42909232\n",
-      "   4.6861084   5.42527161  4.34947034  5.36038535  5.7399534   5.24423642\n",
-      "   5.20082847  2.49900524  4.01998496  5.10963461]\n",
-      " [ 5.4729992   1.73746687  6.05160528  5.41465633  5.50392263  5.79290865\n",
-      "   4.71174616  5.78427058  4.37827431  5.52516206  5.9402688   5.69059978\n",
-      "   5.65718508  2.19316804  3.89025131  5.59140373]]\n",
-      "step 1000, time 1.0, loss 0.16363658, epochs 1579, reward/epoch 20.25316\n",
-      "[[ 10.18680028  10.61824687   6.93419374   9.20017044  10.06042467\n",
-      "    9.62393583  10.01273577   3.87871106  10.02775226   9.88981572\n",
-      "    5.32787981   5.95617372  10.18688936   6.72802561   5.02008833\n",
-      "   10.19329563]\n",
-      " [ 10.16222433  10.71172407   6.52425477   9.16139531  10.22466745\n",
-      "    9.49231047  10.18009003   3.1931334   10.21977381  10.2102702\n",
-      "    5.90638932   5.41986449  10.2773424    6.22292986   5.66302474\n",
-      "   10.35102811]]\n",
-      "step 2000, time 1.9, loss 0.47903617, epochs 2535, reward/epoch 16.73640\n",
-      "[[ 14.53722616  14.18100388  15.2249873   11.7374098   14.43469501\n",
-      "    8.18908845  10.56611333  14.73212661  14.60237716  14.27170254\n",
-      "   11.32891883  14.85953802  14.74126778  14.58854933  14.943818\n",
-      "   15.07752492]\n",
-      " [ 14.41260502  13.95216227  15.22251667  11.28902483  14.21530686\n",
-      "    7.55373371  10.04595178  14.62334358  14.53135551  14.15097346\n",
-      "   11.50985808  14.81857684  14.56408738  14.59752324  14.74978051\n",
-      "   14.87351434]]\n",
-      "step 3000, time 2.9, loss 0.50098210, epochs 3545, reward/epoch 15.84158\n",
-      "[[ 19.02523019  19.4318157   15.91622345  18.91021923   7.79327849\n",
-      "   18.9205681   19.15032291  19.2741968   19.21042446  19.44760445\n",
-      "   19.21560361  19.42792143  16.92199104  18.43912045  19.55385369\n",
-      "   19.18926325]\n",
-      " [ 19.00943585  19.21434296  15.63351222  18.94734306   7.21869375\n",
-      "   18.8818708   19.08468882  19.19155058  19.31497923  19.34918714\n",
-      "   19.3083075   19.1404767   16.49089464  18.3039558   19.4549358\n",
-      "   19.258801  ]]\n",
-      "step 4000, time 3.9, loss 0.60387821, epochs 4798, reward/epoch 12.76935\n",
-      "[[ 21.38964283   1.39231868  17.13931397  22.14805947  21.76089703\n",
-      "   11.25671343  22.31498453  24.26195879  22.311832     1.11627928\n",
-      "   13.60770987   8.20539213  22.3459184    2.8354759   22.39025235\n",
-      "   22.64111744]\n",
-      " [ 22.57321001   2.56760742  18.38129494  23.19703524  22.90714679\n",
-      "   12.50648547  23.36966672  25.13540484  23.39769932   2.29123552\n",
-      "   14.80500687   9.42596431  23.40620112   4.01200821  23.46961363\n",
-      "   23.72097354]]\n",
-      "step 5000, time 5.0, loss 0.91844333, epochs 6394, reward/epoch 10.02506\n",
-      "[[ 19.07933297  18.48176328  12.41009557  18.02018904  13.54235933\n",
-      "    4.70026995  23.37356417  22.44844776   0.38641977  22.60816904\n",
-      "    8.18100639  20.64930267  23.47099905  10.63328357  24.71191261\n",
-      "   22.36467528]\n",
-      " [ 20.32832714  19.72059683  13.65738599  19.27173507  14.78278818\n",
-      "    5.89134338  24.27055277  23.54923793   1.61155764  23.73007519\n",
-      "    9.37755789  21.92492511  24.40497413  11.85944476  25.6612134\n",
-      "   23.42695592]]\n",
-      "step 6000, time 6.1, loss 1.30570635, epochs 8105, reward/epoch 9.35126\n",
-      "[[ 23.25119885  18.603746    23.40549145   5.49891956  17.53127172\n",
-      "   19.98022073  17.86655343  22.02225378  22.47633614  13.22665267\n",
-      "   19.77626647   6.11439811   9.37957081  22.37253727  10.6297531\n",
-      "   22.7163947 ]\n",
-      " [ 24.39987173  19.88737299  24.5584393    6.71548643  18.77592823\n",
-      "   21.26448405  19.1218267   23.15820968  23.56900422  14.46669934\n",
-      "   21.05556203   7.34119725  10.56118802  23.46558107  11.8337382\n",
-      "   23.80818491]]\n",
-      "step 7000, time 7.1, loss 1.32126567, epochs 9816, reward/epoch 9.35126\n",
-      "[[ -0.91659236  12.10120184  24.63422671  22.22380375  20.48779948\n",
-      "   22.21750017   2.16516373  23.60860439  22.33686567  10.31365337\n",
-      "    6.41422078  19.78736883  22.49012661  25.64942762   3.87529505\n",
-      "    8.09815746]\n",
-      " [  0.27391629  13.3133173   25.5950763   23.30486553  21.74166503\n",
-      "   23.28335129   3.41866227  24.44629044  23.51755462  11.50990176\n",
-      "    7.61990704  21.02458409  23.60754742  26.60570467   5.02685809\n",
-      "    9.31593132]]\n",
-      "step 8000, time 8.0, loss 1.31920909, epochs 11526, reward/epoch 9.35673\n",
-      "[[ 19.38206483  18.67849129  21.02176504  10.06953915  18.00251028\n",
-      "    6.18231426  22.7359335   17.92090458  21.98381214   7.87179628\n",
-      "   22.83989625  20.80511965  23.87785049  23.04491713  10.62467377\n",
-      "   10.9452347 ]\n",
-      " [ 20.63720924  19.94019714  22.28308961  11.25459304  19.24468761\n",
-      "    7.36901221  23.83966464  19.15438738  23.19497908   9.11032166\n",
-      "   24.00448731  22.0547385   24.80205324  24.1548476   11.85578597\n",
-      "   12.1690656 ]]\n",
-      "step 9000, time 9.0, loss 1.30709839, epochs 13235, reward/epoch 9.36220\n",
-      "[[ 22.80389926  22.6124855   24.62376723  22.00724372  22.62560963\n",
-      "   22.99472676  19.83475511  11.30460001   2.40978778  22.79220467\n",
-      "   22.41168406  11.95059591  23.65883789   8.80675787   7.00473864\n",
-      "   19.52880678]\n",
-      " [ 23.97952179  23.68353748  25.51922732  23.24952364  23.71732819\n",
-      "   24.10306746  21.08114817  12.57460181   3.60891461  23.94245922\n",
-      "   23.51051439  13.19916594  24.5529458   10.05331401   8.23071654\n",
-      "   20.81212897]]\n",
-      "step 10000, time 10.1, loss 1.34386292, epochs 14951, reward/epoch 9.32401\n"
+      "step 0, time 0.0, loss 0.00122135, epochs 881, reward/epoch 22.08740\n",
+      "step 1000, time 1.0, loss 0.06109310, epochs 1594, reward/epoch 22.44039\n",
+      "step 2000, time 2.0, loss 0.05042740, epochs 2371, reward/epoch 20.59202\n",
+      "step 3000, time 3.0, loss 0.04691446, epochs 3165, reward/epoch 20.15113\n",
+      "step 4000, time 3.9, loss 0.05152649, epochs 4016, reward/epoch 18.80141\n",
+      "step 5000, time 4.9, loss 0.05441860, epochs 4910, reward/epoch 17.89709\n",
+      "step 6000, time 5.9, loss 0.05322341, epochs 5877, reward/epoch 16.54602\n",
+      "step 7000, time 6.9, loss 0.04559015, epochs 6890, reward/epoch 15.79467\n",
+      "step 8000, time 7.8, loss 0.04220275, epochs 7994, reward/epoch 14.49275\n",
+      "step 9000, time 8.8, loss 0.03575175, epochs 9239, reward/epoch 12.85141\n",
+      "step 10000, time 9.9, loss 0.05857377, epochs 10711, reward/epoch 10.86957\n"
      ]
     }
    ],
@@ -616,7 +532,7 @@
     "        new_state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
     "        if done:\n",
     "            observation = envs[i].reset()\n",
-    "            #new_state[:,i] = np.concatenate((preprocess(observation), preprocess(observation)))\n",
+    "            new_state[:,i] = np.concatenate((preprocess(observation), preprocess(observation)))\n",
     "            #new_state[:,i] = np.concatenate((np.zeros_like(state[nfeats:,i]), preprocess(observation)))\n",
     "            total_epochs += 1\n",
     "            #rewards[i] = 0\n",
@@ -658,7 +574,7 @@
     "    t = time.time() - t0\n",
     "    if (istep % printsteps == 0):\n",
     "        #print A\n",
-    "        print q_estimator.predict(state)\n",
+    "        #print q_estimator.predict(state)\n",
     "        #print state\n",
     "        print(\"step {:0d}, time {:.1f}, loss {:.8f}, epochs {:0d}, reward/epoch {:.5f}\".format(\n",
     "                istep, t, block_loss/printsteps, total_epochs, block_reward/np.maximum(1,total_epochs-last_epochs)))\n",
